tweet clone 15 minutes

--- a/starter-code/tweet-clone.html
+++ b/starter-code/tweet-clone.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,46 +8,35 @@
   <link rel="stylesheet" href="tweet-clone.css">
   <title>HTML &amp; CSS | Ironhack PreWork |</title>
 </head>
-<body>
-  <div class="format">
-    <div class="profile">
-        <img src="img/profile-picture.jpg" width="100px" height="100px";>
-    </div>
-    <a class="account">
-      <a class="logo">
-          <img src="img/account-logo.jpg" width="50px" height="50Px";>
-          jack
-          <img src="img/validated-account.jpg" width="50px" height="50px;">
-      </a>
-      <div class="follow">
-        <img src="img/twitter-logo.jpg" width="50px" height"50px";>
-        Follow
-      </div>
-      <a class="user">
-        <p>@Jack
-        </p>
-      </a>
-      </a>
-    <div class="first-tweet">
-      <p> just setting up my twttr
-      </p>
-    </div>
-    <div class="date">
-      <p> 9:50 PM - 21 Mar 2006
-      </p>
-    </div>
-    <a class="image-one">
-      <img src="img/reply.jpg" width="50px" height="50px";>
-    </a>
-    <a class="image-two">
-      <img src="img/retweet.jpg" width="50px" height="50px";>
-      92,555
-    </a>
-    <a class="image-three">
-      <img src="img/favorite.jpg" width="50px" height="50px";>
-      71,111
-    </a>
 
+<body>
+  <div class="container">
+    <div class="profile">
+      <img src="./img/profile-picture.jpg">
+    </div>
+    <div class="user">
+      <div class="name">
+        <img class="hola" src="./img/account-logo.jpg">
+        <h1>Jack</h1>
+        <img class="hola" src="./img/validated-account.jpg">
+        <h2>@jack</h2>
+      </div>
+    </div>
+    <div class="follow">
+      <img src="./img/twitter-logo.jpg">
+      <h1>Follow</h1>
+    </div>
+    <h1 class="hey">just setting up my twitter</h1>
+    <h2>9:50PM - 21 Mar 2006</h2>
+  <div class="last">
+    <img class="lasty" src="./img/reply.jpg">
+    <img  class="lasty" src="./img/retweet.jpg">
+    <h2 class="lasty">92,555</h2>
+    <img class="lasty" src="./img/favorite.jpg">
+    <h2 class="lasty">71,111</h2>
   </div>
+</div>
+
 </body>
+
 </html>
